Increase the hamburger menu breakpoint and padding left and right on the navbar

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <!-- nav -->
     <nav class="relative container mt-6 mx-auto p6">
       <!-- flex container -->
-      <div class="flex items-center justify-between">
+      <div class="flex items-center justify-between px-6">
         <div class="pt-2"><img src="./img/logo.svg" alt="logo" /></div>
-        <div class="hidden md:flex space-x-6 text-xl">
+        <div class="hidden lg:flex space-x-6 text-xl">
           <a href="#" class="hover:text-darkGrayishBlue">Pricing</a>
           <a href="#" class="hover:text-darkGrayishBlue">Product</a>
           <a href="#" class="hover:text-darkGrayishBlue">About Us</a>
@@ -23,11 +23,11 @@
         <!-- Button -->
         <a
           href="#"
-          class="hidden md:block p-3 px-6 pt-2 text-white bg-brightRed rounded-full baseline hover:bg-brightRedLight"
+          class="hidden lg:block p-3 px-6 pt-2 text-white bg-brightRed rounded-full baseline hover:bg-brightRedLight"
           >Sign Up</a
         >
         <!-- Hamburger Icon -->
-        <button id="menu-btn" class="block hamburger md:hidden focus:outline-none">
+        <button id="menu-btn" class="block hamburger lg:hidden focus:outline-none">
           <span class="hamburger-top"></span>
           <span class="hamburger-middle"></span>
           <span class="hamburger-bottom"></span>
@@ -35,7 +35,7 @@
       </div>
 
       <!-- Mobile Menu -->
-      <div class="md:hidden">
+      <div class="lg:hidden">
         <div id="menu" class="absolute hidden flex-col items-center self-end py-8 mt-10 space-y-6 font-bold bg-white sm:w-auto sm:self-center left-8 right-6 drop-shadow-md">
           <a href="#">Pricing</a>
           <a href="#">Product</a>
